updated everything haha - Introduction to Web Assessment 3&4 - fixed up background, added boxes to text, all fonts align, nav and footer are cleaner, added text to About page

--- a/Introduction to Web/Assessments/Assessment 3 & 4/styles/block.css
+++ b/Introduction to Web/Assessments/Assessment 3 & 4/styles/block.css
@@ -1,12 +1,12 @@
 /* ============================================ content ============================================ */
 #main {
-    transition: margin-left .5s;
-    padding: 20px;
+    
 }
 
 body {
     transition: 0.5s; /* for DOM effects */
 }
+
 
 .blank-space {
     /* height: 71%; */
