--- a/Introduction to Web/Assessments/Assessment 3 & 4/styles/components.css
+++ b/Introduction to Web/Assessments/Assessment 3 & 4/styles/components.css
@@ -7,6 +7,23 @@
     100%{background-position:0% 50%}
 }
 
+
+/* -------------- body background -------------- */
+#main {
+    z-index: 0;
+    transition: margin-left .5s;
+    padding: 20px;
+    background-size: 300% 300%;
+    background-image: linear-gradient(
+        -45deg, 
+        rgb(27, 32, 102) 0%, 
+        rgb(76, 56, 151) 25%, 
+        rgb(129, 52, 136) 50%, 
+        rgb(124, 27, 62) 100%
+    );  
+    animation: AnimateGradient 10s ease infinite;
+}
+
 /* -------------- Arcade title text -------------- */
 .arcade-div {
     font-family: 'Press Start 2P', cursive;
@@ -18,14 +35,6 @@
     align-items: center;
     justify-content: center;
     background-size: 300% 300%;
-    background-image: linear-gradient(
-        -45deg, 
-        rgb(27, 32, 102) 0%, 
-        rgb(76, 56, 151) 25%, 
-        rgb(129, 52, 136) 50%, 
-        rgb(124, 27, 62) 100%
-    );  
-    animation: AnimateGradient 10s ease infinite;
 }
 
 .arcade-text {
@@ -72,10 +81,15 @@
 
 
 /* ============================================ lists ============================================ */
+h2 {
+    font-family: 'Quantico', sans-serif;
+}
 .strike-thourgh {
     text-decoration: line-through;
 }
-/* #list_item1 {text-decoration: line-through;} */
+.list li {
+    font-family: 'Share Tech Mono', monospace;
+}
 
 
 
@@ -83,7 +97,17 @@
 /* ============================================ paragraph ============================================ */
 p {
     margin: 0;
+    font-family: 'Share Tech Mono', monospace;
 }
+pre {
+    white-space: pre-line;
+    font-family: 'Share Tech Mono', monospace;
+}
+
+.p-text {
+    font-family: 'Share Tech Mono', monospace;
+}
+
 .i-added-a-class > p {
     color: red;
 }
@@ -91,12 +115,107 @@ p {
     font-family: 'Share Tech Mono', monospace;
 }
 
+.about-text {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-column-gap: 50px;
+    grid-row-gap: 10px;
+}
+#about-title1 {
+    z-index: 1;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+    grid-column-start: 0;
+    grid-column-end: 1;
+    grid-row-start: 0;
+    grid-row-end: 1;
+}
+#about-title2 {
+    z-index: 1;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 0;
+    grid-row-end: 1;
+}
+#about-text1 {
+    z-index: 1;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+    grid-column-start: 0;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#about-text2 {
+    z-index: 1;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+
+
 
 
 /* ============================================ containers ============================================ */
-.testing-div {
-    margin: 10px;
+.about {
+    margin: 40px;
 }
+
+.references {
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+}
+
+.contact {
+    margin: 40px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+}
+.z-in {
+    z-index: 1;
+}
+
+.to-add {
+    margin: 40px;
+    padding: 40px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+}
+
+.testing-div {
+    margin: 40px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: rgb(211, 211, 211);
+}
+
+
+
+/* ============================================ icons ============================================ */
+i {
+    transition: 0.3s;
+} 
+i:hover {
+    transform: scale(1.1);
+} 
 
 
 
@@ -107,7 +226,6 @@ p {
     border-width: 3px;
 }
 .loading-page-link {
-    border-top: 3px solid #858585;
     margin-top: 20px;
     font-family: 'Quantico', sans-serif;
 }
@@ -115,8 +233,10 @@ p {
     z-index: 1;
     width: 100%;
     border: none;
+    border-radius: 20px;
+    padding: 5px 0px 5px;
     text-align: center;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     letter-spacing: 5px;
     font-size: 30px;
     color: white;
@@ -125,4 +245,23 @@ p {
     -4px 0 0 #df4a42,
     2px 0 0 #73c0c2,
     4px 0 0 #4405fc;
+}
+.button {
+    background-color: black;
+    border-radius: 5px;
+    border: 0;
+    padding: 8px 5px 8px;
+}
+.button a {
+    font-family: 'Quantico', sans-serif;
+    text-decoration: none;
+    font-size: 40;
+    transition: 0.3s;
+    color: white;
+}
+.button-text:hover {
+    color: rgb(223, 184, 12);
+}
+.done-btn {
+    font-family: 'Quantico', sans-serif;
 }
