--- a/Introduction to Web/Assessments/Assessment 3 & 4/styles/nav.css
+++ b/Introduction to Web/Assessments/Assessment 3 & 4/styles/nav.css
@@ -8,12 +8,13 @@
     height: 100%;  
     width: 0;
     position: fixed;    
-    z-index: 1;      
+    /* z-index: 1; */
     top: 0;             
     left: 0;
     background-color: rgb(17, 17, 17); 
     overflow-x: hidden;
     transition: 0.5s;
+    border-right: 3px black solid;
     white-space: nowrap;
 }
 
@@ -53,12 +54,13 @@
 #nav-button {
     padding: 6px;
     border: none;
+    background-color: rgba(1, 1, 1, 0);
 }
 #nav-button:hover {
-    background-color: rgb(161, 161, 161)
+    background-color: rgba(1, 1, 1, 0);
 }
 .nav-icon {
-    font-size: 2em;
+    font-size: 4em;
     color:rgb(223, 184, 12);
 }
 
